# snek

./: LICENSE  README.md  snek.cabal
app/: Main.hs
src/SNEK/: AST.hs  Check.hs  Data.hs  PHP.hs  Parse.hs  Read.hs  Symbol.hs  Type.hs
src/SNEK/Read/: Lex.x  Parse.y
std/data/: bool.snek  function.snek  semigroup.snek
test/SNEK/: CheckSpec.hs  ParseSpec.hs  ReadSpec.hs  TypeSpec.hs
