name:                   snek
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib, SNEK.AST, SNEK.Check, SNEK.Symbol, SNEK.Type
  ghc-options:          -Wall
  build-depends:        base, containers, either, lens, mtl
  default-language:     Haskell2010

executable snekc
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base, snek
  default-language:     Haskell2010

test-suite snek-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base, containers, either, hspec, lens, mtl, snek
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
